# levaia

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: filesystem.rs  git.rs  mod.rs  pty.rs  ssh.rs  ssh_pty.rs
src/components/Editor/: Editor.tsx  EditorTabs.tsx
src/components/FileExplorer/: ContextMenu.tsx  FileExplorer.tsx  FileIcons.tsx  FileTreeNode.tsx
src/components/Git/: GitBranches.tsx  GitChanges.tsx  GitCommitInput.tsx  GitFileItem.tsx  GitHistory.tsx  GitPanel.tsx  GitStatusIcon.tsx  index.ts
src/components/Layout/: AppLayout.tsx
src/components/MenuBar/: MenuBar.tsx  WindowControls.tsx
src/components/QuickOpen/: QuickOpen.tsx
src/components/Remote/: RemoteDialog.tsx
src/components/Settings/: Settings.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/Terminal/: Terminal.tsx  TerminalPanel.tsx  TerminalTabs.tsx
src/hooks/: useFileSystem.ts  useGit.ts  useGitBranch.ts  useKeybindings.ts  useTerminal.ts  useUpdateChecker.ts
src/lib/: fileUtils.ts  platform.ts  terminalThemes.ts
src/stores/: editorStore.ts
src/types/: index.ts
