[package]
name = "lite"
version = "0.1.0"
description = "A lightweight code editor"
authors = ["you"]
edition = "2021"

[lib]
name = "lite_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
portable-pty = "0.8"
lazy_static = "1.5"
